--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^2.9.11"
+    },
+    "dependencies": {
+        "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.9.1",
+        "jquery": "^3.6.0",
+        "jquery-form": "^4.3.0"
     }
 }
